<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView" >

    <LinearLayout
        style="@style/Layout"
        android:layout_gravity="center"
        android:background="@null" >

        <TextView
            style="@style/TextView"
            android:layout_marginTop="0dp"
            android:text="@string/fail_word"
            android:textSize="18sp" />

        <ImageView
            style="@style/WidgetVertical"
            android:contentDescription="@string/name"
            android:src="@drawable/fail" />

        <Button
            android:id="@+id/again"
            style="@style/Button"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="44dp"
            android:text="@string/again" />

    </LinearLayout>

</ScrollView>