<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollView" >

        <LinearLayout
            style="@style/Layout"
            android:background="@null"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" >

        <TextView
            style="@style/TextView"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:minWidth="240dp"
            android:text="@string/feedback"
            android:textSize="22sp" />

        <View style="@style/Divider" />

        <EditText
            android:id="@+id/feedEdit"
            style="@style/EditText"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:maxLength="140"
            android:text="@string/feed_word" />

        <View
            style="@style/DividerGray"
            android:layout_marginTop="4dp" />

        <Button
            android:id="@+id/send"
            style="@style/Button"
            android:layout_width="fill_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/send" />

        <View style="@style/DividerGray" />

        <Button
            android:id="@+id/cancel"
            style="@style/Button"
            android:layout_width="fill_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/cancel" />

    </LinearLayout>

</ScrollView>